# Shell

./: Cargo.toml  README.md
.cargo/: config.toml
src/: builtin.rs  lexer.rs  main.rs  readline.rs
