[package]
name = "safa"
version = "0.1.0"
edition = "2024"

[dependencies]
cfg-if = "1.0.0"
embedded-io = { version = "0.7.1", features = ["std"] }
noline = { version = "0.5.1", features = ["std"], git = "https://github.com/safiworks/noline" }
phf = { version = "0.11.3", features = ["macros"] }
thiserror = "2.0.12"
[target.'cfg(target_os = "safaos")'.dependencies]
safa-api = { version = "0.6.0", git = "https://github.com/SafaOS/safa-api", features = ["std"] }
[target.'cfg(not(target_os = "safaos"))'.dependencies]
termion = "4.0.6"
